; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/d3d9/extr_format.c_RemoveAlphaChannel.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/d3d9/extr_format.c_RemoveAlphaChannel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@D3DFMT_X8R8G8B8 = common dso_local global i32 0, align 4
@D3DFMT_X1R5G5B5 = common dso_local global i32 0, align 4
@D3DFMT_X4R4G4B4 = common dso_local global i32 0, align 4
@D3DFMT_X8B8G8R8 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @RemoveAlphaChannel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @RemoveAlphaChannel(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %13 [
    i32 128, label %5
    i32 131, label %7
    i32 130, label %9
    i32 129, label %11
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @D3DFMT_X8R8G8B8, align 4
  store i32 %6, i32* %2, align 4
  br label %16

7:                                                ; preds = %1
  %8 = load i32, i32* @D3DFMT_X1R5G5B5, align 4
  store i32 %8, i32* %2, align 4
  br label %16

9:                                                ; preds = %1
  %10 = load i32, i32* @D3DFMT_X4R4G4B4, align 4
  store i32 %10, i32* %2, align 4
  br label %16

11:                                               ; preds = %1
  %12 = load i32, i32* @D3DFMT_X8B8G8R8, align 4
  store i32 %12, i32* %2, align 4
  br label %16

13:                                               ; preds = %1
  br label %14

14:                                               ; preds = %13
  %15 = load i32, i32* %3, align 4
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %14, %11, %9, %7, %5
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
